2010-02-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py, photoimagegtk.py, photoframe.py:
	  Added support for hide/show function for Icons.

2010-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimage.py: Added Photo Source Icons on the clutter stage.

2010-02-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimage.py, photoframe.py: Added clutter support.

2010-02-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base.py, tumblr.py, picasa.py: Added PluginAuthDialog.
	* tumblr.py: Changed API format from JSON to XML.  Added support
	  dashboard & likes API.  Added Gnome Keyring support.
	* flickr/__init__.py, flickr/api.py: Added new option "Specify
	  other people's ID".

2010-02-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py: Added check_token.
	* flickr/api.py: Added FlickrFavoritesAddAPI & FlickrFavoritesRemoveAPI.
	* flickr/__init__.py, flickr/api.py: Added support for authorized
	  API access.

2010-02-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimage.py, preferences.py, gphotoframe.schemas.in:
	  Fixed default values of max_width & max_height.

2010-02-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py, gphotoframe.glade, flickr/auth.py: 
	  Implemented Flickr Auth functions.
	* flickr/api.py: Divided flickr/__init__.py.
	* plugins/__init__.py, plugins/flickr/__init__.py: Added support
	  for loading plugins from directories.
	* flickr.py, base.py: Added support for user name and group name
	  in url.  Added tooltips for argument entries.

2010-01-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoliststore.py (RecentQueue.pop): Delete old cache files.

2010-01-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py, gphotoframe.glade: Added GUI for preferences of
	  max_width and max_height.

2010-01-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py, photoliststore.py, gphotoframe.glade: Added new
	  option "Display Interval in Full Screen Mode".